--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,9 @@ dependencies:
   flutter:
     sdk: flutter
   equatable: ^2.0.5
-  intl: ^0.17.0
+  intl: ^0.18.1
+  flutter_localizations:
+    sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
