--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   collection: ^1.18.0
   flutter:
     sdk: flutter
+  time_range_picker: ^2.2.0
   equatable: ^2.0.5
   intl: ^0.18.1
   flutter_localizations:
